relations swagger
