# internal/handlers/relations.go
@@ -9,6 +9,19 @@ import (
 	"github.com/moxicom/vk-internship-2024-spring/internal/utils"
 )
 
+// AddRelation handles the HTTP request to add a relation between a movie and an actor.
+//
+// @Summary Add relation
+// @Description Add a relation between a movie and an actor.
+// @Tags Relations
+// @Accept json
+// @Produce json
+// @Param relation body models.RelationMoviesActors true "Relation object to add"
+// @Security BasicAuth
+// @Success 200 {string} string "OK"
+// @Failure 400 {object} string "Bad Request"
+// @Failure 500 {object} string "Internal Server Error"
+// @Router /relations/ [post]
 func (h *Handler) AddRelation(w http.ResponseWriter, r *http.Request) {
 	var rel models.RelationMoviesActors
 	err := json.NewDecoder(r.Body).Decode(&rel)
@@ -41,6 +54,19 @@ func (h *Handler) AddRelation(w http.ResponseWriter, r *http.Request) {
 }
 
 // Delete by query parameter
+// DeleteRelation handles the HTTP request to delete a relation between a movie and an actor.
+//
+// @Summary Delete relation
+// @Description Delete a relation between a movie and an actor.
+// @Tags Relations
+// @Accept json
+// @Produce json
+// @Param relation body models.RelationMoviesActors true "Relation object to delete"
+// @Security BasicAuth
+// @Success 200 {string} string "OK"
+// @Failure 400 {object} string "Bad Request"
+// @Failure 500 {object} string "Internal Server Error"
+// @Router /relations/ [delete]
 func (h *Handler) DeleteRelation(w http.ResponseWriter, r *http.Request) {
 	// Get rel params
 	var rel models.RelationMoviesActors
